# SAM

./: .breakpoints  .replit  Sam.py  chat.py  main.py  manage.py  pyproject.toml  sam.ipynb  web.py
intel/: Bio.txt  Chem.txt  Math.txt  Phy.txt
templates/: index.html  index1.html
