[tool.poetry]
name = "repl-nix-sam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sam"}]

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.5.2"
requests = "^2.31.0"
flask = "^3.0.3"
chatbotai = "^0.3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
